Creación de método para crear usuario y autenticación
