# componenteProducto/models/users.py
@@ -1,0 +1,15 @@
+from db import db
+from flask_bcrypt import generate_password_hash, check_password_hash
+
+class User(db.Model):
+    __tablename__ = 'users'
+    
+    id = db.Column(db.Integer, primary_key=True)
+    username = db.Column(db.String(80), unique=True, nullable=False)
+    password_hash = db.Column(db.String(128), nullable=False)
+
+    def set_password(self, password):
+        self.password_hash = generate_password_hash(password).decode('utf-8')
+    
+    def check_password(self, password):
+        return check_password_hash(self.password_hash, password)
